--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/Dorin2/Project4#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "eslint": "^8.19.0",
+    "eslint-plugin-react": "^7.30.1",
     "json-server": "^0.17.0"
   }
 }
